# cover

./: .dockerignore  .editorconfig  .eslintignore  .eslintrc  .gitignore  Cargo.toml  LICENSE  Makefile  README-DEV.md  README-dev.md  README.md  README.temp.md  build.js  canister_ids.json  canister_name.sh  cover.did  cover.old.did  dfx.json  dirs.sh  install.sh  package-lock.json  package.json  rust-toolchain.toml
services/cover/: Cargo.toml  README-dev.MD  cover.did
services/cover/src/: lib.rs  main.rs  upgrade.rs
services/cover/src/api/: admin.rs  build_config.rs  mod.rs  progress.rs  provider.rs  request.rs  verification.rs
services/cover/src/common/: types.rs
services/cover/src/service/: admin.rs  build_config.rs  canister_build_config.rs  constants.rs  cover.rs  cover_service.rs  error_handler.rs  guard.rs  mod.rs  progress.rs  provider.rs  request.rs  time_utils.rs  types.rs  utils.rs  verification.rs
services/cover/src/service/model/: build_config.rs  canister.rs  canister_build_config.rs  error.rs  mod.rs  progress.rs  provider.rs  request.rs  verification.rs
services/cover/src/service/store/: admin.rs  build_config.rs  canister_build_config.rs  error.rs  mod.rs  progress.rs  progress_tracker.rs  provider.rs  registry.rs  request.rs  verification.rs
services/cover/src/service/store/test_data/: add_build_config.rs  add_provider.rs  add_request.rs  add_verification.rs  build_config.rs  build_settings.rs  caller_gen.rs  canister.rs  canister_build_config.rs  create_request.rs  mod.rs  provider_info.rs  submit_verification.rs  update_build_config.rs  (+3 more)
(+206 files in other folders)
