[package]
name = "cover"
version = "0.0.1"
edition = "2018"
authors = ["Fleek Team <support@fleek.co>"]

[dependencies]
serde = "1.0.132"
chrono = "0.4.19"
ic-cdk = { git = "https://github.com/dfinity/cdk-rs", rev = "dfb6889db8efdcd3a82195fc9df495c261241878" }
candid = "0.7.4"
ic-cdk-macros = { git = "https://github.com/dfinity/cdk-rs", rev = "dfb6889db8efdcd3a82195fc9df495c261241878" }
