[package]
name = "cover"
version = "0.0.1"
edition = "2018"
authors = ["Robert Bialek <robert@fleek.co>"]

[dependencies]
ic-cdk-macros = "0.3.2"
ic-cdk = "0.3.2"
ic-kit = "0.4.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_bytes = "0.11"
serde_with = "1.6.2"
serde_json = "1.0.68"
chrono = "0.4.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version="1.10.0", features = ["attributes"] }

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
