[package]
name = "cover"
version = "0.0.1"
edition = "2018"
authors = ["Fleek Team <support@fleek.co>"]

[dependencies]
ic-cdk-macros = "0.3.2"
ic-cdk = "0.3.2"
ic-kit = "0.4.3"
serde = { version = "1.0.130", features = ["derive"] }
chrono = "0.4.19"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }

[features]
local_replica = []
